# agent

./: .gitignore  .releaserc.json  Cargo.toml  README.md  build-kernel.sh  build-rootfs.sh  build-static.sh  exec.go  go.mod  go.sum  handle_c.go  handle_cpp.go  handle_golang.go  handle_python.go  main.go  openrc-service.sh  setup-alpine.sh
.github/workflows/: ci.yml  push.yml  release.yml
archive/rust/: Cargo.toml
archive/rust/src/routes/: go.rs  health.rs  python.rs
archive/rust/src/run/: c.rs  go.rs  python.rs
old-golang/: go.mod
src/: main.rs
src/compile/: c.rs  cpp.rs  mod.rs  python.rs
src/exec/: mod.rs  python.rs
src/routes/: c.rs  cmd.rs  go.rs  mod.rs  python.rs
src/run/: c.rs  command.rs  go.rs  mod.rs
