[package]
name = "agent"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.0"
futures = "0.3"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
duct = "0.13.5"

[dev-dependencies]
actix-rt = "1"
