[package]
name = "agent"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "2.0.0"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0"

[dev-dependencies]
actix-rt = "2"
